--- a/src/index.html
+++ b/src/index.html
@@ -13,25 +13,30 @@
 
 <body>
 	<header>
-		<nav class="red">
+		<nav>
 			<div class="nav-wrapper">
 				<div class="container">
-					<a href="#" class="brand-logo">LOGO</a>
+					<a href="#" class="brand-logo">
+						<img src="img/logo.svg" alt="ALFA - domy weselne">
+					</a>
 					<a href="#" data-activates="mobile-menu" class="button-collapse">
 						<i class="material-icons">menu</i>
 					</a>
 					<ul class="right hide-on-med-and-down">
 						<li>
-							<a href="#">item1</a>
+							<a href="#">o nas</a>
 						</li>
 						<li>
-							<a href="#">item2</a>
+							<a href="#">oferta</a>
 						</li>
 						<li>
-							<a href="#">item3</a>
+							<a href="#">promocje</a>
 						</li>
 						<li>
-							<a href="#">item4</a>
+							<a href="#">galeria</a>
+						</li>
+						<li>
+							<a href="#">kontakt</a>
 						</li>
 					</ul>
 					<ul class="side-nav" id="mobile-menu">
