--- a/src/index.html
+++ b/src/index.html
@@ -13,59 +13,59 @@
 
 <body>
 	<header>
-		<nav>
-			<div class="nav-wrapper">
-				<div class="container">
-					<a href="#" class="brand-logo">
-						<img src="img/logo.svg" alt="ALFA - domy weselne">
-					</a>
-					<a href="#" data-activates="mobile-menu" class="button-collapse">
-						<i class="material-icons">menu</i>
-					</a>
-					<ul class="right hide-on-med-and-down">
-						<li>
-							<a href="#">o nas</a>
-						</li>
-						<li>
-							<a href="#">oferta</a>
-						</li>
-						<li>
-							<a href="#">promocje</a>
-						</li>
-						<li>
-							<a href="#">galeria</a>
-						</li>
-						<li>
-							<a href="#">kontakt</a>
-						</li>
-					</ul>
-					<ul class="side-nav" id="mobile-menu">
-						<li>
-							<div class="userView">
-								<a href="#!name">
-									<span class="white-text name">John Doe</span>
-								</a>
-								<a href="#!email">
-									<span class="white-text email">jdandturk@gmail.com</span>
-								</a>
-							</div>
-						</li>
-						<li>
-							<a href="#">item1</a>
-						</li>
-						<li>
-							<a href="#">item2</a>
-						</li>
-						<li>
-							<a href="#">item3</a>
-						</li>
-						<li>
-							<a href="#">item4</a>
-						</li>
-					</ul>
+		<div class="navbar-fixed">
+			<nav>
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">
+							<img src="img/logo.svg" alt="ALFA - domy weselne">
+						</a>
+						<a href="#" data-activates="mobile-menu" class="button-collapse">
+							<i class="material-icons">menu</i>
+						</a>
+						<div class="col s12 right-align hide-on-med-and-down facebook">
+							<a href="#">
+								<img src="img/fb.svg" alt="facebook">
+							</a>
+						</div>
+						<ul class="right hide-on-med-and-down">
+							<li>
+								<a href="#">o nas</a>
+							</li>
+							<li>
+								<a href="#">oferta</a>
+							</li>
+							<li>
+								<a href="#">promocje</a>
+							</li>
+							<li>
+								<a href="#">galeria</a>
+							</li>
+							<li>
+								<a href="#">kontakt</a>
+							</li>
+						</ul>
+						<ul class="side-nav" id="mobile-menu">
+							<li>
+								<a href="#">o nas</a>
+							</li>
+							<li>
+								<a href="#">oferta</a>
+							</li>
+							<li>
+								<a href="#">promocje</a>
+							</li>
+							<li>
+								<a href="#">galeria</a>
+							</li>
+							<li>
+								<a href="#">kontakt</a>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
+			</nav>
+		</div>
 	</header>
 	<main>
 		<!-- Your content here -->
