--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-	<header>
+	<header id="home" class="scrollspy">
 		<div class="navbar-fixed">
 			<nav>
 				<div class="nav-wrapper">
 					<div class="container">
-						<a href="#" class="brand-logo">
+						<a href="#home" class="brand-logo">
 							<img src="img/logo.svg" alt="ALFA - domy weselne">
 						</a>
 						<a href="#" data-activates="mobile-menu" class="button-collapse">
@@ -30,24 +30,24 @@
 						</div>
 						<ul class="right hide-on-med-and-down">
 							<li>
-								<a href="#">o nas</a>
+								<a href="#onas">o nas</a>
 							</li>
 							<li>
-								<a href="#">oferta</a>
+								<a href="#oferta">oferta</a>
 							</li>
 							<li>
-								<a href="#">promocje</a>
+								<a href="#promocje">promocje</a>
 							</li>
 							<li>
-								<a href="#">galeria</a>
+								<a href="#galeria">galeria</a>
 							</li>
 							<li>
-								<a href="#">kontakt</a>
+								<a href="#kontakt">kontakt</a>
 							</li>
 						</ul>
 						<ul class="side-nav" id="mobile-menu">
 							<li>
-								<a href="#">o nas</a>
+								<a href="#onas">o nas</a>
 							</li>
 							<li>
 								<a href="#">oferta</a>
@@ -69,6 +69,11 @@
 	</header>
 	<main>
 		<!-- Your content here -->
+		<section id="onas" class="scrollspy"></section>
+		<section id="oferta" class="scrollspy"></section>
+		<section id="promocje" class="scrollspy"></section>
+		<section id="galeria" class="scrollspy"></section>
+		<section id="kontakt" class="scrollspy"></section>
 	</main>
 	<footer class="page-footer cyan">
 		<div class="container">
