--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+	<a class="material-icons" href="#home" id="toTop" title="Na górę strony">expand_less</a>
+
 	<header id="home" class="scrollspy">
 		<div class="navbar-fixed">
 			<nav>
@@ -24,7 +26,7 @@
 							<i class="material-icons">menu</i>
 						</a>
 						<div class="col s12 right-align hide-on-med-and-down facebook">
-							<a href="#">
+							<a href="https://www.facebook.com/domweselnyalfa" target="_blank">
 								<img src="img/fb.svg" alt="facebook">
 							</a>
 						</div>
