header text animation

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,11 @@
 				</div>
 			</nav>
 		</div>
+		<div class="header-text center-align">
+			<h1></h1>
+			<h2></h2>
+			<h2></h2>
+		</div>
 	</header>
 	<main>
 		<!-- Your content here -->
