--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="img/favicon.png">
 	<title>ALFA - domy weselne</title>
 	<link rel="stylesheet" href="css/materialize-icon.css" media="screen,projection">
 	<link rel="stylesheet" href="css/materialize.css" media="screen,projection">
@@ -69,9 +70,11 @@
 			</nav>
 		</div>
 		<div class="header-text center-align">
-			<h1></h1>
-			<h2></h2>
-			<h2></h2>
+			<div>
+				<h1></h1>
+				<h2></h2>
+				<h2></h2>
+			</div>
 		</div>
 	</header>
 	<main>
