--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+	<div id="preloader">
+		<div class="load">
+			<hr/>
+			<hr/>
+			<hr/>
+			<hr/>
+		</div>
+	</div>
+
 	<a class="material-icons" href="#home" id="toTop" title="Na górę strony">expand_less</a>
 
 	<header id="home" class="scrollspy">
