--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,117 @@
 		</div>
 	</header>
 	<main>
-		<!-- Your content here -->
-		<section id="onas" class="scrollspy"></section>
-		<section id="oferta" class="scrollspy"></section>
+		<section id="onas" class="scrollspy container">
+			<h1>Co nas różni od konkurencji?</h1>
+			<div class="row icons">
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Eleganckie wnętrza</div>
+					<div>Wspaniała architektura, ekskluzywny design i kreacja umożliwiają zorganizowanie wesela w stylu nowoczesnym. Dodatkowo
+						różnorodność oświetlenia, mebli i materiałów wykończeniowych umożliwiają przystrojenie sal w nietuzinkowy sposób. </div>
+				</div>
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Wyśmienite potrawy</div>
+					<div>Szefowie Kuchni z bogatym stażem zapewniają tradycyjne potrawy w oryginalnych smakach. Serwując dania w ciepłej i rodzinnej
+						atmosferze słyniemy z Polskiej Kuchni opartej na tradycyjnej recepturze gwarantującej smaczne i niepowtarzalne jedzenie.
+					</div>
+				</div>
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Idealna lokalizacja</div>
+					<div>Jeżeli chcecie, żeby Wasze wesele miało niepowtarzalny klimat - jesteście we właściwym miejscu. W sercu małopolski,
+						na przedmieściach miasta Nowego Sącza, bezpośrednio przy trasie prowadzącej w kierunku Krakowa, najważniejsza zabawa
+						Waszego życia zyska dodatkowy blask.</div>
+				</div>
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Małe i duże przyjęcia</div>
+					<div>Do dyspozycji Was i Waszych gości oddajemy domy weselne, gdzie w zależności od lokalu wygodnie może zasiąść 260 osób
+						oraz 110 osób.</div>
+				</div>
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Estetyka</div>
+					<div>Estetyka ma dla nas duże znaczenie. Dlatego zwracamy uwagę nie tylko na smak poszczególnych dań, ale również na ich
+						oryginalny i wyszukany wygląd. Stąd też wynika nasza niezwykła dbałość o najdrobniejsze detale wystroju. Specyficzny
+						mikroklimat Alfy oddziałuje na wszystkie zmysły, pobudzając i wyostrzając nie tylko zmysł smaku, ale i też wzroku.</div>
+				</div>
+				<div class="col s12 m6 l4 icon">
+					<div>
+						<img src="img/icon1.svg" alt="">
+					</div>
+					<div>Profesjonalna obsługa</div>
+					<div>Miła i profesjonalna obsługa gwarantuje usługi na najwyższym poziomie. To właśnie nasza załoga nadaje specyficzną atmosferę,
+						która sprzyja odprężeniu i oderwaniu się od trosk dnia codziennego.</div>
+				</div>
+			</div>
+		</section>
+		<section id="oferta" class="scrollspy">
+			<div class="row">
+				<div class="col m12 l6 blackbox">
+					<h1>Oferta</h1>
+					<p>Nasza firma od 1996 roku zajmuje się organizacją imprez okolicznościowych takich jak:
+						<b>
+							<ul>
+								<li>Wesela,</li>
+								<li>Studniówki,</li>
+								<li>Chrzty,</li>
+								<li>Pierwsze Komunie,</li>
+								<li>Urodziny,</li>
+								<li>Imieniny,</li>
+								<li>Jubileusze,</li>
+								<li>Spotkania Firmowe itp.</li>
+							</ul>
+						</b>
+					</p>
+					<p>Do Państwa dyspozycji oddaliśmy dwa Domy Weselne Alfa. Pierwszy lokal z powodzeniem służy naszym Gościom nie przerwanie
+						od 1996 r. Wybiegając ku nowym Państwa wymaganiom w 2009 roku przekazaliśmy do Państwa dyspozycji drugi, ekskluzywny
+						Dom Weselny. Nasze obiekty są w pełni klimatyzowane oraz monitorowane. Oddaliśmy do użytku również tarasy, altany,
+						fontanny wraz z obszernymi ogrodami. Przy budynkach znajdują się obszerne parkingi. Uroczyste przyjęcia w naszym lokalu
+						to wyjątkowa dbałość o szczegóły, spełnianie Waszych oczekiwań oraz oddanie do Waszej dyspozycji naszych doświadczeń
+						organizacyjnych, wyczucia oraz umiejętności.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col m12 l6 blackbox right">
+					<h1>Menu weselne</h1>
+					<p>W cenie każdego menu weselnego jest:
+						<ul>
+							<li>Ceremoniał powitania Nowożeńców chlebem i solą oraz lampka szampana</li>
+							<li>Lampka szampana dla wszystkich Gości w czasie ceremonii powitalnej</li>
+							<li>Uroczysty Obiad + Trzy Dania Gorące, podane w odpowiednich odstępach czasowych</li>
+							<li>Przystawki - uzupełniana podczas trwania uroczystości</li>
+							<li>Napoje zimne i gorące bez limitu</li>
+							<li>Lody</li>
+							<li>Owoce</li>
+						</ul>
+					</p>
+					<p>Za dopłatą polecamy również:
+						<ul>
+							<li>Wiejski Stół</li>
+							<li>Stół na Ciepło (golonki, żeberka, pierogi, kwaśnica z żeberkiem, bigos, żurek po staropolsku)</li>
+							<li>Stół Słodki</li>
+							<li>Fontannę Czekoladową</li>
+							<li>Napis LOVE</li>
+							<li>Taniec w Chmurkach (ciężki dym na pierwszy taniec)</li>
+							<li>Pokrowce na krzesła (uszyte na miarę)</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</section>
 		<section id="promocje" class="scrollspy"></section>
 		<section id="galeria" class="scrollspy"></section>
 		<section id="kontakt" class="scrollspy"></section>
