--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
 			<div class="row icons">
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/diamond.svg" alt="">
 					</div>
 					<div>Eleganckie wnętrza</div>
 					<div>Wspaniała architektura, ekskluzywny design i kreacja umożliwiają zorganizowanie wesela w stylu nowoczesnym. Dodatkowo
@@ -100,7 +100,7 @@
 				</div>
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/cake.svg" alt="">
 					</div>
 					<div>Wyśmienite potrawy</div>
 					<div>Szefowie Kuchni z bogatym stażem zapewniają tradycyjne potrawy w oryginalnych smakach. Serwując dania w ciepłej i rodzinnej
@@ -109,7 +109,7 @@
 				</div>
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/placeholder.svg" alt="">
 					</div>
 					<div>Idealna lokalizacja</div>
 					<div>Jeżeli chcecie, żeby Wasze wesele miało niepowtarzalny klimat - jesteście we właściwym miejscu. W sercu małopolski,
@@ -118,7 +118,7 @@
 				</div>
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/compact-disc.svg" alt="">
 					</div>
 					<div>Małe i duże przyjęcia</div>
 					<div>Do dyspozycji Was i Waszych gości oddajemy domy weselne, gdzie w zależności od lokalu wygodnie może zasiąść 260 osób
@@ -126,7 +126,7 @@
 				</div>
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/like.svg" alt="">
 					</div>
 					<div>Estetyka</div>
 					<div>Estetyka ma dla nas duże znaczenie. Dlatego zwracamy uwagę nie tylko na smak poszczególnych dań, ale również na ich
@@ -135,7 +135,7 @@
 				</div>
 				<div class="col s12 m6 l4 icon">
 					<div>
-						<img src="img/icon1.svg" alt="">
+						<img src="img/users.svg" alt="">
 					</div>
 					<div>Profesjonalna obsługa</div>
 					<div>Miła i profesjonalna obsługa gwarantuje usługi na najwyższym poziomie. To właśnie nasza załoga nadaje specyficzną atmosferę,
