--- a/src/index.html
+++ b/src/index.html
@@ -198,6 +198,19 @@
 				</div>
 			</div>
 		</section>
+		<section id="zapraszamy">
+			<div class="container center-align">
+				<div class="row">
+					<div class="col s12">
+						<p>Zapraszamy na oględziny naszych lokali
+							<br>Zapoznaj się z naszą ofertą</p>
+					</div>
+					<div class="col s12">
+						<a href="#kontakt" class="button">Kontakt</a>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id="promocje" class="scrollspy"></section>
 		<section id="galeria" class="scrollspy"></section>
 		<section id="kontakt" class="scrollspy"></section>
