--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,74 @@
 				</div>
 			</div>
 		</section>
-		<section id="promocje" class="scrollspy"></section>
+		<section id="promocje" class="scrollspy">
+			<div class="container">
+				<div class="row">
+					<div class="col s12 blackbox">
+						<h1>Promocje</h1>
+						<ul class="collapsible popout" data-collapsible="accordion">
+							<li>
+								<div class="collapsible-header">
+									Dom Weselny ALFA II : 26 grudnia (Świeta Bożego Narodzenia)
+								</div>
+								<div class="collapsible-body">
+									Cena:
+									<ul>
+										<li>160zł/os - wesele bez poprawin</li>
+										<li>180zł/os - wesele z poprawinami</li>
+									</ul>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									Dom Weselny ALFA II : 31 grudnia 2018 roku (Sylwester)
+								</div>
+								<div class="collapsible-body">
+									180zł/os - wesele z poprawinami (wymagane minimum 150 osób dorosłych)
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									Dom Weselny ALFA II : Rok 2018/2019
+								</div>
+								<div class="collapsible-body">
+									<ul>
+										<li>1, 8, 15 grudnia 2018 roku</li>
+										<li>26 grudnia (środa) 2018 roku (Święta Bożego Narodzenia)</li>
+										<li>31 grudnia (poniedziałek) 2018 roku (Sylwester)</li>
+										<li>5, 26 stycznia 2019 roku</li>
+										<li>16, 23 lutego 2019 roku</li>
+										<li>16, 30 listopada 2019 roku</li>
+										<li>25 grudnia (środa) 2019 roku (Święta Bożego Narodzenia)</li>
+									</ul>
+									<ul>
+										<li>Wesele w dni powszednie (od poniedziałku do czwartku). Likwidacja limitu liczby osób (minimalna liczba to 100 osób
+											dorosłych, obowiązująca w weekendy i święta)</li>
+									</ul>
+									Cena od osoby za powyższe terminy wynosi:
+									<ul>
+										<li>160zł/os - wesele bez poprawin</li>
+										<li>180zł/os - wesele z poprawinami</li>
+									</ul>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									Dom Weselny ALFA I : Ostatnie wolne terminy na rok 2018/2019
+								</div>
+								<div class="collapsible-body">
+									Cena:
+									<ul>
+										<li>180zł/os - cena za 2 dni w 2018/19 roku (przez cały sezon)</li>
+										<li>150zł/os - cena za 1 dzień w 2018/19 roku (przez cały sezon)</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id="galeria" class="scrollspy"></section>
 		<section id="kontakt" class="scrollspy"></section>
 	</main>
