gallery images added

--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,18 @@
 				</div>
 			</div>
 		</section>
-		<section id="galeria" class="scrollspy"></section>
+		<section id="galeria" class="scrollspy">
+			<h1>Galeria</h1>
+			<div class="container">
+				<div class="row">
+					<div class="col s12 m6 l4">
+						<img src="img/galeria/1.jpg" class="materialboxed" alt="">
+						<img src="img/galeria/1.jpg" class="materialboxed" alt="">
+						<img src="img/galeria/1.jpg" class="materialboxed" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id="kontakt" class="scrollspy"></section>
 	</main>
 	<footer class="page-footer cyan">
