--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="img/favicon.png">
 	<title>ALFA - domy weselne</title>
+	<!-- build:css -->
 	<link rel="stylesheet" href="css/materialize-icon.css" media="screen,projection">
 	<link rel="stylesheet" href="css/materialize.css" media="screen,projection">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/simplelightbox.css">
+	<!-- endbuild -->
 </head>
 
 <body>
@@ -383,11 +385,13 @@ for ($i = 1; $i <= $galleryLenght; $i++) {
 			</div>
 		</div>
 	</footer>
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBAShMIns1q5Mic2jlY5UcWAhbdjuW5ujU"></script>
+	<!-- build:js -->
 	<script src="js/jquery.js"></script>
 	<script src="js/materialize.js"></script>
 	<script src="js/simple-lightbox.js"></script>
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBAShMIns1q5Mic2jlY5UcWAhbdjuW5ujU"></script>
 	<script src="js/script.js"></script>
+	<!-- endbuild -->
 </body>
 
 </html>
