--- a/src/index.html
+++ b/src/index.html
@@ -338,6 +338,7 @@ for ($i = 1; $i <= $galleryLenght; $i++) {
 					</div>
 				</div>
 			</div>
+			<h1>Napisz do nas</h1>
 			<div class="container form">
 				<div class="row">
 					<div class="col s12 m6">
