--- a/src/index.html
+++ b/src/index.html
@@ -323,18 +323,34 @@ for ($i = 1; $i <= $galleryLenght; $i++) {
 					<div class="col s12 m6 choosed">
 						<p>Dom Weselny Alfa II</p>
 						<p>Wielogłowy 282</p>
-						<p>tel. <a href="tel:+48 18 548 94 99">+48 18 548 94 99</a></p>
-						<p>kom. <a href="tel:+48 508 254 382">+48 508 254 382</a></p>
-						<p>email: <a href="mailto:domweselnyalfa2@op.pl">domweselnyalfa2@op.pl</a></p>
-						<div class="col s12 right-align show-on-map">Pokaż na mapie <i class="material-icons">location_on</i></div>
+						<p>tel.
+							<a href="tel:+48 18 548 94 99">+48 18 548 94 99</a>
+						</p>
+						<p>kom.
+							<a href="tel:+48 508 254 382">+48 508 254 382</a>
+						</p>
+						<p>email:
+							<a href="mailto:domweselnyalfa2@op.pl">domweselnyalfa2@op.pl</a>
+						</p>
+						<div class="col s12 right-align show-on-map">Pokaż na mapie
+							<i class="material-icons">location_on</i>
+						</div>
 					</div>
 					<div class="col s12 m6">
 						<p>Dom Weselny Alfa I</p>
 						<p>Wielogłowy 174</p>
-						<p>tel. <a href="tel:+48 18 443 27 53">+48 18 443 27 53</a></p>
-						<p>kom. <a href="tel:+48 508 254 382">+48 508 254 382</a></p>
-						<p>email: <a href="mailto:domweselnyalfa1@op.pl">domweselnyalfa1@op.pl</a></p>
-						<div class="col s12 right-align show-on-map">Pokaż na mapie <i class="material-icons">location_on</i></div>
+						<p>tel.
+							<a href="tel:+48 18 443 27 53">+48 18 443 27 53</a>
+						</p>
+						<p>kom.
+							<a href="tel:+48 508 254 382">+48 508 254 382</a>
+						</p>
+						<p>email:
+							<a href="mailto:domweselnyalfa1@op.pl">domweselnyalfa1@op.pl</a>
+						</p>
+						<div class="col s12 right-align show-on-map">Pokaż na mapie
+							<i class="material-icons">location_on</i>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -365,12 +381,21 @@ for ($i = 1; $i <= $galleryLenght; $i++) {
 				</div>
 			</div>
 		</section>
+		<section>
+			<div class="parallax-container">
+				<div class="parallax">
+					<img src="img/bg-promocje3.jpg">
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m6 copyright">
-					Copyright &copy; <?php echo date('Y'); ?> <span class="company-name">ALFA</span>
+					Copyright &copy;
+					<?php echo date('Y'); ?>
+					<span class="company-name">ALFA</span>
 				</div>
 				<div class="col s12 m6 polecaja">
 					Polecają nas:
