oferta LI fixes

--- a/src/index.html
+++ b/src/index.html
@@ -149,55 +149,59 @@
 		<section id="oferta" class="scrollspy">
 			<div class="row">
 				<div class="col m12 l6 blackbox">
-					<h1>Oferta</h1>
-					<p>Nasza firma od 1996 roku zajmuje się organizacją imprez okolicznościowych takich jak:
-						<b>
-							<ul>
-								<li>Wesela,</li>
-								<li>Studniówki,</li>
-								<li>Chrzty,</li>
-								<li>Pierwsze Komunie,</li>
-								<li>Urodziny,</li>
-								<li>Imieniny,</li>
-								<li>Jubileusze,</li>
-								<li>Spotkania Firmowe itp.</li>
-							</ul>
-						</b>
-					</p>
-					<p>Do Państwa dyspozycji oddaliśmy dwa Domy Weselne Alfa. Pierwszy lokal z powodzeniem służy naszym Gościom nie przerwanie
-						od 1996 r. Wybiegając ku nowym Państwa wymaganiom w 2009 roku przekazaliśmy do Państwa dyspozycji drugi, ekskluzywny
-						Dom Weselny. Nasze obiekty są w pełni klimatyzowane oraz monitorowane. Oddaliśmy do użytku również tarasy, altany,
-						fontanny wraz z obszernymi ogrodami. Przy budynkach znajdują się obszerne parkingi. Uroczyste przyjęcia w naszym lokalu
-						to wyjątkowa dbałość o szczegóły, spełnianie Waszych oczekiwań oraz oddanie do Waszej dyspozycji naszych doświadczeń
-						organizacyjnych, wyczucia oraz umiejętności.
-					</p>
+					<div class="container">
+						<h1>Oferta</h1>
+						<p>Nasza firma od 1996 roku zajmuje się organizacją imprez okolicznościowych takich jak:
+							<b>
+								<ul>
+									<li>Wesela,</li>
+									<li>Studniówki,</li>
+									<li>Chrzty,</li>
+									<li>Pierwsze Komunie,</li>
+									<li>Urodziny,</li>
+									<li>Imieniny,</li>
+									<li>Jubileusze,</li>
+									<li>Spotkania Firmowe itp.</li>
+								</ul>
+							</b>
+						</p>
+						<p>Do Państwa dyspozycji oddaliśmy dwa Domy Weselne Alfa. Pierwszy lokal z powodzeniem służy naszym Gościom nie przerwanie
+							od 1996 r. Wybiegając ku nowym Państwa wymaganiom w 2009 roku przekazaliśmy do Państwa dyspozycji drugi, ekskluzywny
+							Dom Weselny. Nasze obiekty są w pełni klimatyzowane oraz monitorowane. Oddaliśmy do użytku również tarasy, altany,
+							fontanny wraz z obszernymi ogrodami. Przy budynkach znajdują się obszerne parkingi. Uroczyste przyjęcia w naszym lokalu
+							to wyjątkowa dbałość o szczegóły, spełnianie Waszych oczekiwań oraz oddanie do Waszej dyspozycji naszych doświadczeń
+							organizacyjnych, wyczucia oraz umiejętności.
+						</p>
+					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col m12 l6 blackbox right">
-					<h1>Menu weselne</h1>
-					<p>W cenie każdego menu weselnego jest:
-						<ul>
-							<li>Ceremoniał powitania Nowożeńców chlebem i solą oraz lampka szampana</li>
-							<li>Lampka szampana dla wszystkich Gości w czasie ceremonii powitalnej</li>
-							<li>Uroczysty Obiad + Trzy Dania Gorące, podane w odpowiednich odstępach czasowych</li>
-							<li>Przystawki - uzupełniana podczas trwania uroczystości</li>
-							<li>Napoje zimne i gorące bez limitu</li>
-							<li>Lody</li>
-							<li>Owoce</li>
-						</ul>
-					</p>
-					<p>Za dopłatą polecamy również:
-						<ul>
-							<li>Wiejski Stół</li>
-							<li>Stół na Ciepło (golonki, żeberka, pierogi, kwaśnica z żeberkiem, bigos, żurek po staropolsku)</li>
-							<li>Stół Słodki</li>
-							<li>Fontannę Czekoladową</li>
-							<li>Napis LOVE</li>
-							<li>Taniec w Chmurkach (ciężki dym na pierwszy taniec)</li>
-							<li>Pokrowce na krzesła (uszyte na miarę)</li>
-						</ul>
-					</p>
+					<div class="container">
+						<h1>Menu weselne</h1>
+						<p>W cenie każdego menu weselnego jest:
+							<ul>
+								<li>Ceremoniał powitania Nowożeńców chlebem i solą oraz lampka szampana</li>
+								<li>Lampka szampana dla wszystkich Gości w czasie ceremonii powitalnej</li>
+								<li>Uroczysty Obiad + Trzy Dania Gorące, podane w odpowiednich odstępach czasowych</li>
+								<li>Przystawki - uzupełniana podczas trwania uroczystości</li>
+								<li>Napoje zimne i gorące bez limitu</li>
+								<li>Lody</li>
+								<li>Owoce</li>
+							</ul>
+						</p>
+						<p>Za dopłatą polecamy również:
+							<ul>
+								<li>Wiejski Stół</li>
+								<li>Stół na Ciepło (golonki, żeberka, pierogi, kwaśnica z żeberkiem, bigos, żurek po staropolsku)</li>
+								<li>Stół Słodki</li>
+								<li>Fontannę Czekoladową</li>
+								<li>Napis LOVE</li>
+								<li>Taniec w Chmurkach (ciężki dym na pierwszy taniec)</li>
+								<li>Pokrowce na krzesła (uszyte na miarę)</li>
+							</ul>
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
