--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,7 @@ for ($i = 1; $i <= $galleryLenght; $i++) {
 				</div>
 			</div>
 		</section>
-		<section>
+		<section id="parallax">
 			<div class="parallax-container">
 				<div class="parallax">
 					<img src="img/bg-promocje3.jpg">
